--- a/sandbox_mlb.ipynb
+++ b/sandbox_mlb.ipynb
@@ -50,32 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb7554ca-604d-4eec-8be4-842b56bd5902",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "fc0b9596",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-25T01:59:20.008639Z",
-     "iopub.status.busy": "2023-05-25T01:59:20.007976Z",
-     "iopub.status.idle": "2023-05-25T01:59:20.091490Z",
-     "shell.execute_reply": "2023-05-25T01:59:20.090350Z",
-     "shell.execute_reply.started": "2023-05-25T01:59:20.008601Z"
+     "iopub.execute_input": "2023-05-27T17:50:28.887774Z",
+     "iopub.status.busy": "2023-05-27T17:50:28.887436Z",
+     "iopub.status.idle": "2023-05-27T17:50:29.184317Z",
+     "shell.execute_reply": "2023-05-27T17:50:29.183816Z",
+     "shell.execute_reply.started": "2023-05-27T17:50:28.887752Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "Teams_and_IDs = pd.read_csv(\"Teams_and_IDs.csv\")\n",
-    "Player_Positions = pd.read_csv(\"MLB_Player_Positions.csv\")\n",
-    "Park_Data = pd.read_csv(\"mlb_parks.csv\")\n",
-    "park_venues = set(Park_Data[\"Venue\"])"
+    "from data.load_static_data import *"
    ]
   },
   {
@@ -415,7 +404,9 @@
   {
    "cell_type": "markdown",
    "id": "cde2a5a6-6352-4ee0-80bd-8abf81eeb010",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# collect and cache history data"
    ]
@@ -423,9 +414,7 @@
   {
    "cell_type": "markdown",
    "id": "93d87843-6047-45de-8f51-6ece60469634",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## schedules"
    ]
@@ -1508,25 +1497,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "id": "f1d1d9a6-0f54-48a6-ab74-67f870c2ae4a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-25T00:45:21.087046Z",
-     "iopub.status.busy": "2023-05-25T00:45:21.086754Z",
-     "iopub.status.idle": "2023-05-25T00:45:21.091444Z",
-     "shell.execute_reply": "2023-05-25T00:45:21.090953Z",
-     "shell.execute_reply.started": "2023-05-25T00:45:21.087027Z"
+     "iopub.execute_input": "2023-05-26T02:09:42.555948Z",
+     "iopub.status.busy": "2023-05-26T02:09:42.555356Z",
+     "iopub.status.idle": "2023-05-26T02:10:09.336796Z",
+     "shell.execute_reply": "2023-05-26T02:10:09.336220Z",
+     "shell.execute_reply.started": "2023-05-26T02:09:42.555924Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "21770"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13709,14 +13698,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3bb933e8-c0ae-4bbf-bde5-4b51c17fd956",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "id": "dd2b467c-af71-4349-832f-5944d903b6c6",
    "metadata": {
@@ -13798,15 +13779,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "f1d977b5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-25T01:10:45.945843Z",
-     "iopub.status.busy": "2023-05-25T01:10:45.945728Z",
-     "iopub.status.idle": "2023-05-25T01:11:05.300640Z",
-     "shell.execute_reply": "2023-05-25T01:11:05.299998Z",
-     "shell.execute_reply.started": "2023-05-25T01:10:45.945833Z"
+     "iopub.execute_input": "2023-05-26T02:10:09.337697Z",
+     "iopub.status.busy": "2023-05-26T02:10:09.337557Z",
+     "iopub.status.idle": "2023-05-26T02:10:27.558679Z",
+     "shell.execute_reply": "2023-05-26T02:10:27.558157Z",
+     "shell.execute_reply.started": "2023-05-26T02:10:09.337686Z"
     },
     "tags": []
    },
@@ -13829,15 +13810,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "e116e303-c8a2-45da-8312-0648cdd8f4fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-25T01:11:05.458858Z",
-     "iopub.status.busy": "2023-05-25T01:11:05.458751Z",
-     "iopub.status.idle": "2023-05-25T01:11:05.876747Z",
-     "shell.execute_reply": "2023-05-25T01:11:05.875990Z",
-     "shell.execute_reply.started": "2023-05-25T01:11:05.458848Z"
+     "iopub.execute_input": "2023-05-26T02:10:27.559596Z",
+     "iopub.status.busy": "2023-05-26T02:10:27.559475Z",
+     "iopub.status.idle": "2023-05-26T02:10:28.113346Z",
+     "shell.execute_reply": "2023-05-26T02:10:28.111955Z",
+     "shell.execute_reply.started": "2023-05-26T02:10:27.559587Z"
     },
     "tags": []
    },
@@ -13857,7 +13838,9 @@
   {
    "cell_type": "markdown",
    "id": "e30abebe-829c-4085-97fc-b7cf05a8a80e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# construct match up dataset for 2023"
    ]
@@ -13937,12 +13920,16 @@
    "execution_count": 41,
    "id": "16de197c-ae29-48c2-85d1-f367be0949fe",
    "metadata": {
+    "collapsed": true,
     "execution": {
      "iopub.execute_input": "2023-05-25T02:06:53.303668Z",
      "iopub.status.busy": "2023-05-25T02:06:53.303264Z",
      "iopub.status.idle": "2023-05-25T02:07:42.599462Z",
      "shell.execute_reply": "2023-05-25T02:07:42.598927Z",
      "shell.execute_reply.started": "2023-05-25T02:06:53.303646Z"
+    },
+    "jupyter": {
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -14446,7 +14433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4e11d2-fede-4e44-88c7-43924da931eb",
+   "id": "aef99115-5db4-4cf2-b154-08e5ef452b08",
    "metadata": {},
    "outputs": [],
    "source": []
