--- a/model_training_run.ipynb
+++ b/model_training_run.ipynb
@@ -1268,6 +1268,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "see the higher threshold catches smaller portion (recall ~ 5%) but with much higher precision 72%."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
