sandbox live bet

--- a/sandbox_live_bet.ipynb
+++ b/sandbox_live_bet.ipynb
@@ -1530,15 +1530,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "id": "bc57f210-ce9f-4455-8a27-0dd3cc341809",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-29T19:29:29.493673Z",
-     "iopub.status.busy": "2023-05-29T19:29:29.493417Z",
-     "iopub.status.idle": "2023-05-29T19:29:29.506047Z",
-     "shell.execute_reply": "2023-05-29T19:29:29.505353Z",
-     "shell.execute_reply.started": "2023-05-29T19:29:29.493661Z"
+     "iopub.execute_input": "2023-05-29T19:32:27.141684Z",
+     "iopub.status.busy": "2023-05-29T19:32:27.141397Z",
+     "iopub.status.idle": "2023-05-29T19:32:27.153789Z",
+     "shell.execute_reply": "2023-05-29T19:32:27.152987Z",
+     "shell.execute_reply.started": "2023-05-29T19:32:27.141660Z"
     }
    },
    "outputs": [
@@ -1571,8 +1571,6 @@
        "      <th>theo_odds</th>\n",
        "      <th>over_odds</th>\n",
        "      <th>over_line</th>\n",
-       "      <th>under_odds</th>\n",
-       "      <th>under_line</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1586,8 +1584,6 @@
        "      <td>-296</td>\n",
        "      <td>-260</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>+190</td>\n",
-       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>124</th>\n",
@@ -1598,21 +1594,6 @@
        "      <td>0.7387</td>\n",
        "      <td>-283</td>\n",
        "      <td>-230</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+165</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Adolis Garcia</td>\n",
-       "      <td>0.7387</td>\n",
-       "      <td>-283</td>\n",
-       "      <td>-230</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+165</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1625,21 +1606,6 @@
        "      <td>-280</td>\n",
        "      <td>-260</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>+180</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Minnesota Twins</td>\n",
-       "      <td>Houston Astros</td>\n",
-       "      <td>Jose Abreu</td>\n",
-       "      <td>0.7370</td>\n",
-       "      <td>-280</td>\n",
-       "      <td>-260</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+180</td>\n",
-       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>93</th>\n",
@@ -1650,34 +1616,6 @@
        "      <td>0.7365</td>\n",
        "      <td>-280</td>\n",
        "      <td>-255</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+185</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Colorado Rockies</td>\n",
-       "      <td>Arizona Diamondbacks</td>\n",
-       "      <td>Kris Bryant</td>\n",
-       "      <td>0.7365</td>\n",
-       "      <td>-280</td>\n",
-       "      <td>-255</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+185</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Colorado Rockies</td>\n",
-       "      <td>Arizona Diamondbacks</td>\n",
-       "      <td>Kris Bryant</td>\n",
-       "      <td>0.7365</td>\n",
-       "      <td>-280</td>\n",
-       "      <td>-255</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+185</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1690,47 +1628,6 @@
        "      <td>-278</td>\n",
        "      <td>-270</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Marcus Semien</td>\n",
-       "      <td>0.7352</td>\n",
-       "      <td>-278</td>\n",
-       "      <td>-270</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Marcus Semien</td>\n",
-       "      <td>0.7352</td>\n",
-       "      <td>-278</td>\n",
-       "      <td>-270</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Marcus Semien</td>\n",
-       "      <td>0.7352</td>\n",
-       "      <td>-278</td>\n",
-       "      <td>-270</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>128</th>\n",
@@ -1741,21 +1638,6 @@
        "      <td>0.7281</td>\n",
        "      <td>-268</td>\n",
        "      <td>-260</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+190</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Corey Seager</td>\n",
-       "      <td>0.7281</td>\n",
-       "      <td>-268</td>\n",
-       "      <td>-260</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+190</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1768,21 +1650,6 @@
        "      <td>-255</td>\n",
        "      <td>+195</td>\n",
        "      <td>1.5</td>\n",
-       "      <td>-275</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Nathaniel Lowe</td>\n",
-       "      <td>0.7182</td>\n",
-       "      <td>-255</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>-275</td>\n",
-       "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>132</th>\n",
@@ -1793,34 +1660,6 @@
        "      <td>0.7135</td>\n",
        "      <td>-249</td>\n",
        "      <td>-275</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Javier Baez</td>\n",
-       "      <td>0.7135</td>\n",
-       "      <td>-249</td>\n",
-       "      <td>-275</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>Detroit Tigers</td>\n",
-       "      <td>Javier Baez</td>\n",
-       "      <td>0.7135</td>\n",
-       "      <td>-249</td>\n",
-       "      <td>-275</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1833,21 +1672,6 @@
        "      <td>-242</td>\n",
        "      <td>-245</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>+180</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Kansas City Royals</td>\n",
-       "      <td>St. Louis Cardinals</td>\n",
-       "      <td>Paul Goldschmidt</td>\n",
-       "      <td>0.7073</td>\n",
-       "      <td>-242</td>\n",
-       "      <td>-245</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+180</td>\n",
-       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>55</th>\n",
@@ -1859,21 +1683,6 @@
        "      <td>-234</td>\n",
        "      <td>-275</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>Kansas City Royals</td>\n",
-       "      <td>St. Louis Cardinals</td>\n",
-       "      <td>Nolan Arenado</td>\n",
-       "      <td>0.7002</td>\n",
-       "      <td>-234</td>\n",
-       "      <td>-275</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>+195</td>\n",
-       "      <td>0.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1883,55 +1692,29 @@
        "     game_date           team_away             team_home      batting_name  \\\n",
        "5   2023-05-29     Minnesota Twins        Houston Astros       Jose Altuve   \n",
        "124 2023-05-29       Texas Rangers        Detroit Tigers     Adolis Garcia   \n",
-       "123 2023-05-29       Texas Rangers        Detroit Tigers     Adolis Garcia   \n",
        "4   2023-05-29     Minnesota Twins        Houston Astros        Jose Abreu   \n",
-       "3   2023-05-29     Minnesota Twins        Houston Astros        Jose Abreu   \n",
        "93  2023-05-29    Colorado Rockies  Arizona Diamondbacks       Kris Bryant   \n",
-       "94  2023-05-29    Colorado Rockies  Arizona Diamondbacks       Kris Bryant   \n",
-       "95  2023-05-29    Colorado Rockies  Arizona Diamondbacks       Kris Bryant   \n",
        "143 2023-05-29       Texas Rangers        Detroit Tigers     Marcus Semien   \n",
-       "146 2023-05-29       Texas Rangers        Detroit Tigers     Marcus Semien   \n",
-       "145 2023-05-29       Texas Rangers        Detroit Tigers     Marcus Semien   \n",
-       "144 2023-05-29       Texas Rangers        Detroit Tigers     Marcus Semien   \n",
        "128 2023-05-29       Texas Rangers        Detroit Tigers      Corey Seager   \n",
-       "129 2023-05-29       Texas Rangers        Detroit Tigers      Corey Seager   \n",
        "148 2023-05-29       Texas Rangers        Detroit Tigers    Nathaniel Lowe   \n",
-       "147 2023-05-29       Texas Rangers        Detroit Tigers    Nathaniel Lowe   \n",
        "132 2023-05-29       Texas Rangers        Detroit Tigers       Javier Baez   \n",
-       "134 2023-05-29       Texas Rangers        Detroit Tigers       Javier Baez   \n",
-       "133 2023-05-29       Texas Rangers        Detroit Tigers       Javier Baez   \n",
        "62  2023-05-29  Kansas City Royals   St. Louis Cardinals  Paul Goldschmidt   \n",
-       "61  2023-05-29  Kansas City Royals   St. Louis Cardinals  Paul Goldschmidt   \n",
        "55  2023-05-29  Kansas City Royals   St. Louis Cardinals     Nolan Arenado   \n",
-       "56  2023-05-29  Kansas City Royals   St. Louis Cardinals     Nolan Arenado   \n",
        "\n",
-       "     prediction_score  theo_odds over_odds  over_line under_odds  under_line  \n",
-       "5              0.7475       -296      -260        0.5       +190         0.5  \n",
-       "124            0.7387       -283      -230        0.5       +165         0.5  \n",
-       "123            0.7387       -283      -230        0.5       +165         0.5  \n",
-       "4              0.7370       -280      -260        0.5       +180         0.5  \n",
-       "3              0.7370       -280      -260        0.5       +180         0.5  \n",
-       "93             0.7365       -280      -255        0.5       +185         0.5  \n",
-       "94             0.7365       -280      -255        0.5       +185         0.5  \n",
-       "95             0.7365       -280      -255        0.5       +185         0.5  \n",
-       "143            0.7352       -278      -270        0.5       +195         0.5  \n",
-       "146            0.7352       -278      -270        0.5       +195         0.5  \n",
-       "145            0.7352       -278      -270        0.5       +195         0.5  \n",
-       "144            0.7352       -278      -270        0.5       +195         0.5  \n",
-       "128            0.7281       -268      -260        0.5       +190         0.5  \n",
-       "129            0.7281       -268      -260        0.5       +190         0.5  \n",
-       "148            0.7182       -255      +195        1.5       -275         1.5  \n",
-       "147            0.7182       -255      +195        1.5       -275         1.5  \n",
-       "132            0.7135       -249      -275        0.5       +195         0.5  \n",
-       "134            0.7135       -249      -275        0.5       +195         0.5  \n",
-       "133            0.7135       -249      -275        0.5       +195         0.5  \n",
-       "62             0.7073       -242      -245        0.5       +180         0.5  \n",
-       "61             0.7073       -242      -245        0.5       +180         0.5  \n",
-       "55             0.7002       -234      -275        0.5       +195         0.5  \n",
-       "56             0.7002       -234      -275        0.5       +195         0.5  "
+       "     prediction_score  theo_odds over_odds  over_line  \n",
+       "5              0.7475       -296      -260        0.5  \n",
+       "124            0.7387       -283      -230        0.5  \n",
+       "4              0.7370       -280      -260        0.5  \n",
+       "93             0.7365       -280      -255        0.5  \n",
+       "143            0.7352       -278      -270        0.5  \n",
+       "128            0.7281       -268      -260        0.5  \n",
+       "148            0.7182       -255      +195        1.5  \n",
+       "132            0.7135       -249      -275        0.5  \n",
+       "62             0.7073       -242      -245        0.5  \n",
+       "55             0.7002       -234      -275        0.5  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,8 +1722,8 @@
    "source": [
     "score_threshold = 0.70\n",
     "df_live_prediction_odds_ = df_live_prediction_odds.reset_index()\n",
-    "confident_df_live_prediction_odds = df_live_prediction_odds_[(df_live_prediction_odds_[\"prediction_score\"] >= score_threshold) & (df_live_prediction_odds_[\"prediction_label\"] == 1)].sort_values(by = \"prediction_score\", ascending = False)\n",
-    "confident_df_live_prediction_odds[['game_date', 'team_away', 'team_home', 'batting_name', \"prediction_score\", \"theo_odds\", 'over_odds', 'over_line', 'under_odds', 'under_line']]"
+    "confident_df_live_prediction_odds = df_live_prediction_odds_[(df_live_prediction_odds_[\"prediction_score\"] >= score_threshold) & (df_live_prediction_odds_[\"prediction_label\"] == 1)].sort_values(by = \"prediction_score\", ascending = False).drop_duplicates(\"batting_name\")\n",
+    "confident_df_live_prediction_odds[['game_date', 'team_away', 'team_home', 'batting_name', \"prediction_score\", \"theo_odds\", 'over_odds', 'over_line']]"
    ]
   },
   {
