--- a/sandbox_live_bet.ipynb
+++ b/sandbox_live_bet.ipynb
@@ -92,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 151,
    "id": "58b92d87-7f53-4719-9e75-42d0bf4b0b81",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T01:29:47.302556Z",
-     "iopub.status.busy": "2023-06-12T01:29:47.301987Z",
-     "iopub.status.idle": "2023-06-12T01:29:47.320384Z",
-     "shell.execute_reply": "2023-06-12T01:29:47.319241Z",
-     "shell.execute_reply.started": "2023-06-12T01:29:47.302520Z"
+     "iopub.execute_input": "2023-06-16T00:07:10.784781Z",
+     "iopub.status.busy": "2023-06-16T00:07:10.784441Z",
+     "iopub.status.idle": "2023-06-16T00:07:10.799914Z",
+     "shell.execute_reply": "2023-06-16T00:07:10.799303Z",
+     "shell.execute_reply.started": "2023-06-16T00:07:10.784759Z"
     }
    },
    "outputs": [
@@ -110,7 +110,7 @@
        "<module 'model.common' from '/home/junlim/projects/mlb-props/model/common.py'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2353,11 +2353,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
+   "id": "70c8be91-8f76-4b1b-8d03-abf2fe8159c5",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:09:00.252789Z",
+     "iopub.status.busy": "2023-06-16T00:09:00.252331Z",
+     "iopub.status.idle": "2023-06-16T00:09:00.256404Z",
+     "shell.execute_reply": "2023-06-16T00:09:00.255766Z",
+     "shell.execute_reply.started": "2023-06-16T00:09:00.252771Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6750419371076013\n",
+      "-208\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_live_advantageous_prediction_odds_since_2023_start.over_prob.mean())\n",
+    "print(model.common.probability_to_odds(df_live_advantageous_prediction_odds_since_2023_start.over_prob.mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "id": "232596f8-b354-46d1-b5fc-987050299e18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:07:26.628945Z",
+     "iopub.status.busy": "2023-06-16T00:07:26.628684Z",
+     "iopub.status.idle": "2023-06-16T00:07:26.633880Z",
+     "shell.execute_reply": "2023-06-16T00:07:26.633203Z",
+     "shell.execute_reply.started": "2023-06-16T00:07:26.628927Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-567"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.common.probability_to_odds(0.85)"
+   ]
   },
   {
    "cell_type": "code",
