--- a/readme.ipynb
+++ b/readme.ipynb
@@ -10,6 +10,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2088f349-c8b8-4b48-b4ff-2f39e3ee87c6",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "jupyter nbconvert --execute --to markdown readme.ipynb\n",
+    "```\n",
+    "is to be run to convert this notebook to a markdown file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c43c30e0-0a49-4513-b804-952341fe84a0",
    "metadata": {
     "execution": {
@@ -33,6 +44,14 @@
     "* `fetch_today_matchup_and_odds_run.py` should run at the beginning of each day, this creates matchup for today's live bet and fetches the odds for today's games.\n",
     "* add this line `0 8 * * * /home/junlim/projects/mlb-props/daily_run.sh` to crontab to run it every 8am daily.\n",
     "* add this line `0 10 * * * /home/junlim/projects/mlb-props/daily_live_run.sh` to crontab to run it every 10am daily.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "250dcf1a-241c-4aab-8327-552c27ff6698",
+   "metadata": {},
+   "source": [
+    "The odds fetch is hosted in the gcp vm (sandbox(2)), and updated to `trading-290017.major_league_baseball.odds_hit_recorded` table."
    ]
   },
   {
